# affogato

./: Cargo.toml  LICENSE  README.md  txt
affogato_core/: Cargo.toml  index.html
affogato_core/src/: cmath.rs  lib.rs  main.rs  num.rs  sets.rs
affogato_core/src/groups/: mod.rs  vector_spaces.rs
affogato_math/: Cargo.toml
affogato_math/src/: godot.rs  lib.rs  main.rs  spaces.rs
affogato_math/src/algebra/: complex.rs  formula.rs  imaginary.rs  mod.rs  quaternion.rs
affogato_math/src/animation/: mod.rs
affogato_math/src/geometry/: hyperplane.rs  mod.rs  quadrilateral.rs  ray.rs  rect.rs  segment.rs  simplex.rs  sphere.rs  triangle.rs
affogato_math/src/mappings/: morton.rs
affogato_math/src/matrix/: mat2.rs  mat3.rs  mat4.rs  mod.rs
affogato_math/src/sets/: mod.rs  natural.rs  properties.rs
affogato_math/src/transformations/: mod.rs  rotate.rs  scale.rs  translation.rs
affogato_math/src/util/: mod.rs  normal.rs  sdf.rs
affogato_math/src/vector/: mod.rs  polar.rs  types.rs  vec2.rs  vec3.rs  vec4.rs  vec5.rs
affogato_math/tests/: vector_tests.rs
affogato_physics/: Cargo.toml
affogato_physics/src/: kinematic.rs  lib.rs
affogato_physics/src/collision/: gjk.rs  gjk2d.rs  mod.rs  rect.rs  sphere.rs
affogato_physics/src/kinematics/: mod.rs
affogato_physics/src/rigidbody/: mod.rs
graphics_feature/: Cargo.toml
graphics_feature/src/: lib.rs
graphics_feature/src/camera/: mod.rs
graphics_feature/src/color/: mod.rs
graphics_feature/src/geometry/: mod.rs
graphics_feature/src/web/: mod.rs
src/: definitions.rs  lib.rs  main.rs  smoothing.rs  spaces.rs  transform.rs
src/algebra/: complex.rs  formula.rs  imaginary.rs  mod.rs  quaternion.rs
src/animation/: mod.rs
src/complex/: mod.rs  quaternion.rs
src/data/: filter_scan.rs  iterator.rs  mod.rs  quicksort.rs  unique_copy.rs
src/geometry/: mod.rs  quadrilateral.rs  ray.rs  segment.rs  sphere.rs  triangle.rs
src/linalg/: mod.rs  polar.rs
src/linear/: matrix.rs  mod.rs  transform.rs  vector.rs
src/linear/vector/: atomic.rs  mod.rs  polar.rs
src/mappings/: morton.rs
src/matrix/: mod.rs
src/polynomial/: mod.rs
src/sets/: mod.rs  natural.rs  properties.rs  types.rs
src/shapes/: mod.rs  polygon.rs
src/spatial/: mod.rs  morton.rs
src/spatial/packing/: mod.rs  rectangle.rs
src/vector/: mod.rs  polar.rs  types.rs
