[package]
name = "affogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
rand = { version = "0.8.5", optional = true}
rand_pcg = { version = "0.3.1", optional = true }

[features]
glsl = []
rand = ["dep:rand"]
rand_pcg = ["dep:rand_pcg", "dep:rand"]
