[package]
name = "affogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
affogato_math = { path = "affogato_math" }
affogato_physics = { path = "affogato_physics" }
graphics_feature = { path = "graphics_feature" }
[features]
rand = ["dep:rand", "affogato_math/rand"]
physics = []