[package]
name = "affogato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true, default-features = false }
affogato_math = { path = "affogato_math" }
affogato_core = { path = "affogato_core" }
affogato_physics = { path = "affogato_physics" }
graphics_feature = { path = "graphics_feature" }
[features]
default = ["alloc"]
alloc = ["affogato_math/alloc", "affogato_physics/alloc", "graphics_feature/alloc"]
serde = ["affogato_math/serde", "affogato_physics/serde", "graphics_feature/serde"]
rand = ["dep:rand", "affogato_math/rand"]
physics = []
graphics = []
web = ["graphics_feature/web"]
godot = ["affogato_math/godot"]
glsl = ["affogato_math/glsl"]
