[package]
name = "affogato_math"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
rand = { version = "0.9.0", optional = true }
bytemuck = { version = "1.23.0", features = ["derive"] }
godot = { version = "0.2.4", optional = true }
[features]
rand = ["dep:rand"]
godot = ["dep:godot"]
glsl = []
