[package]
name = "affogato_math"
version = "0.1.0"
edition = "2024"

[dependencies]
affogato_core ={ path = "../affogato_core"}
paste = "1.0.15"
rand = { version = "0.9.1", default-features = false, optional = true }
bytemuck = { version = "1.23.0", features = ["derive"] }
godot = { version = "0.2.4", optional = true }
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive"] }
[features]
default = ["alloc"]
alloc = []
rand = ["dep:rand"]
godot = ["dep:godot"]
glsl = []
serde = ["dep:serde"]