[package]
name = "graphics_feature"
version = "0.1.0"
edition = "2024"

[dependencies]
affogato_math = { path = "../affogato_math" }
affogato_physics = { path = "../affogato_physics" }
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive"] }

[features]
default = ["alloc"]
alloc = []
serde = ["dep:serde"]